<?xml version="1.0" encoding="utf-8"?>
<!-- register.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp">

    <EditText
        android:id="@+id/registereamil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enteremaiil"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextNickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entername"
        android:inputType="text" />

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:id="@+id/radioButtonMale"
            android:layout_marginEnd="50dp"
            android:checked="true"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:id="@+id/radioButtonFemale"/>
    </RadioGroup>

    <EditText
        android:id="@+id/editTextPassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterpwd"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/againpwd"
        android:inputType="textPassword" />
    <TextView
        android:id="@+id/tologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/tologin"
        tools:ignore="RtlHardcoded"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="50dp"/>

</LinearLayout>
